--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,16 @@
         console.log("Perdimos comunicación con el servidor");
       });
       socket.emit("mensaje", { nombre: "Daniel" });
-      socket.on("mensaje", function (payload) {
+
+      socket.on("nuevo-mensaje", function (payload) {
         console.log("Escuchando:", payload);
+      });
+
+      socket.on("active-bands", function (bands) {
+        console.log("hola");
+        console.clear();
+        console.log("Hola");
+        console.table(bands);
       });
     </script>
   </body>
